<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">halo</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="qrcode">QR Code</string>

    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forget_password">forget password</string>
    <string name="login_username_hint">UID/email/phone num</string>
    <string name="login_password_hint">password</string>


</resources>
